<resources>
    <string name="app_name">TipsCalculatorApp</string>
    <string name="tip_amount">Tip Amount: %s</string>
    <string name="calculate">Calculate</string>
    <string name="round_up_tip">Round up tip?</string>
    <string name="ok_15">OK (15%)</string>
    <string name="good_18">Good (18%)</string>
    <string name="amazing_20">Amazing (20%)</string>
    <string name="how_was_the_service">How was the service?</string>
    <string name="coast_of_service">Coast of Service</string>
    <string name="label" />
    <string name="cost_of_service">cost_of_service</string>
    <string name="service_coast">service coast</string>
</resources>