<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <ImageView
                android:id="@+id/icon_cost_of_service"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:importantForAccessibility="no"
                app:layout_constraintBottom_toBottomOf="@+id/edtServiceCoast"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/edtServiceCoast"
                app:srcCompat="@drawable/ic_store" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edtServiceCoast"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:hint="@string/service_coast"
                app:layout_constraintStart_toEndOf="@id/icon_cost_of_service"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/cost_of_service_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal" />

            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/icon_service_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:importantForAccessibility="no"
                app:layout_constraintBottom_toBottomOf="@id/service_question"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/service_question"
                app:srcCompat="@drawable/ic_service" />

            <TextView
                android:id="@+id/service_question"
                style="style/Widget.TipsCalculatorApp.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/how_was_the_service"
                app:layout_constraintStart_toStartOf="@+id/edtServiceCoast"
                app:layout_constraintTop_toBottomOf="@+id/edtServiceCoast" />

            <RadioGroup
                android:id="@+id/rgTipOptions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkedButton="@+id/rbOptionOne"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="@id/service_question"
                app:layout_constraintTop_toBottomOf="@id/service_question">

                <RadioButton
                    android:id="@+id/rbOptionOne"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/amazing_20" />

                <RadioButton
                    android:id="@+id/optionTwo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/good_18" />

                <RadioButton
                    android:id="@+id/optionThree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ok_15" />

            </RadioGroup>

            <ImageView
                android:id="@+id/icon_round_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:importantForAccessibility="no"
                app:layout_constraintBottom_toBottomOf="@+id/roundUpSwitch"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/roundUpSwitch"
                app:srcCompat="@drawable/ic_round_up" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/roundUpSwitch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/round_up_tip"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/rgTipOptions"
                app:layout_constraintTop_toBottomOf="@+id/rgTipOptions" />

            <Button
                android:id="@+id/btnCalculateTip"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:text="@string/calculate"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/roundUpSwitch"
                app:layout_constraintTop_toBottomOf="@+id/roundUpSwitch"
              />


            <TextView
                android:id="@+id/tvTipResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Tip Amount: $10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnCalculateTip" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>







